<resources>
    <string name="app_name">The Ultimate Cat Quiz</string>
    <string name="textmenu">Menu</string>
    <string name="buttonnewgame">New Game</string>
    <string name="buttonhighscores">High Scores</string>
    <string name="buttonquit">Quit</string>
    <string name="buttonbug">E-mail</string>
    <string name="textbug">Encountered bugs or want to suggest an improvement? Write me an e-mail!</string>
    <string name="textplayername">Hello! Please enter your name to progress with the quiz: </string>
    <string name="playernameinput">Hello </string>
    <string name="textplayerhint">Enter name here</string>
    <string name="buttonnext">Submit</string>
    <string name="textpart1">Part 1. True or false.</string>
    <string name="texttruth">True</string>
    <string name="textfalse">False</string>
    <string name="eyecontact">1. Eye contact is a sign of challenge and aggression, however slow blinking means no threat and love.</string>
    <string name="catsclaws">2. Cats claws shape makes them unable to climb down the trees.</string>
    <string name="catsears">3. Cats can manipulate their ears direction to locate sound source.</string>
    <string name="catseyes">4. Cats have an additional pair of eye lids.</string>
    <string name="textpart2">Part 2. Please select the items of special cat interest:</string>
    <string name="textpart3">Part 3. Please select the correct answer: </string>
    <string name="question1">1. Cat Goddess of Ancient Egypt is called: </string>
    <string name="answer1">Bastet</string>
    <string name="false1a">Anubis</string>
    <string name="false1b">Ra</string>
    <string name="false1c">Cleopatra</string>
    <string name="question2">2. Lucky cat from Japan is called: </string>
    <string name="answer2">Maneki-neko</string>
    <string name="false2a">Kimono</string>
    <string name="false2b">Konichiwa</string>
    <string name="false2c">Nekomusume</string>
    <string name="question3">3. What is the cats biological diet?</string>
    <string name="answer3">Carnivore</string>
    <string name="false3a">Omnivore</string>
    <string name="false3b">Herbivore</string>
    <string name="playerdefaultname">Player</string>
    <string name="textthankyou">Thank you! Press Submit to calculate your score.</string>
    <string name="buttonsubmit">Submit score</string>
    <string name="toastincomplete">There are still questions without answer!</string>
    <string name="textscore1">Congratulations! You have scored:</string>
    <string name="textscore2">/13 points</string>
</resources>
