<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context="pl.com.przybylek.littlecatquiz.CatQuizActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="185dp"
                android:background="#607D8B"
                android:scaleType="fitCenter"
                android:src="@drawable/lunkalaptophorizontal" />

            <TextView
                android:id="@+id/textfieldname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/textplayername"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/playername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/textplayerhint"
                android:inputType="textCapWords"
                android:padding="8dp"
                android:textSize="16dp" />

            <Button
                android:id="@+id/buttonnext"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="42dp"
                android:onClick="namesubmit"
                android:text="@string/buttonnext" />

            <TextView
                android:id="@+id/part1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textpart1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/firstquestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/eyecontact" />

            <RadioGroup
                android:id="@+id/firstgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/question1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texttruth" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textfalse" />

            </RadioGroup>

            <TextView
                android:id="@+id/secondquestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/catsclaws" />

            <RadioGroup
                android:id="@+id/secondgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/question2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texttruth" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textfalse" />

            </RadioGroup>

            <TextView
                android:id="@+id/thirdquestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/catsears" />

            <RadioGroup
                android:id="@+id/thirdgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/question3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texttruth" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textfalse" />

            </RadioGroup>

            <TextView
                android:id="@+id/fourthquestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/catseyes" />

            <RadioGroup
                android:id="@+id/fourthgroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texttruth" />

                <RadioButton
                    android:id="@+id/question4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textfalse" />

            </RadioGroup>

            <TextView
                android:id="@+id/titlepart2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textpart2"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/karton" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/drapak" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/CheckBoxCardboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="75dp" />

                <CheckBox
                    android:id="@+id/CheckBoxScratchPole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/patyczek" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/zabawka" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/CheckBoxCosmeticStick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="75dp" />

                <CheckBox
                    android:id="@+id/CheckBoxToyMouse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cucumber" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/boots" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/CheckBoxCucumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="75dp" />

                <CheckBox
                    android:id="@+id/CheckBoxBoots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/part3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textpart3"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/part3egypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/question1" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false1a"
                    android:padding="8dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false1b"
                    android:padding="8dp"/>

                <RadioButton
                    android:id="@+id/question3_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1"
                    android:padding="8dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false1c"
                    android:padding="8dp"/>
            </RadioGroup>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/question2"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false2a" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false2c" />

                <RadioButton
                    android:id="@+id/question3_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/question3" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false3a"
                    android:padding="8dp"/>

                <RadioButton
                    android:id="@+id/question3_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3"
                    android:padding="8dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false3b"
                    android:padding="8dp"/>
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateScore"
                android:text="@string/buttonsubmit"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/ending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:text="@string/textthankyou"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="185dp"
                android:background="#000000"
                android:scaleType="fitCenter"
                android:src="@drawable/pabloczarny" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>